--- a/Article_bon_lfw_x30_crop_5749_Adam_20_epoch_function_resnet_(1).ipynb
+++ b/Article_bon_lfw_x30_crop_5749_Adam_20_epoch_function_resnet_(1).ipynb
@@ -42,7 +42,7 @@
         "id": "vBtcb6-k6ptq"
       },
       "source": [
-        "# **Face recognition with RESNET50**\n"
+        "# **Face recognition with RESNET50 (here the LFW dataset and has been trained over 20 epochs)**\n"
       ]
     },
     {
